--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -9,7 +9,7 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
 resources.db.adapter = "pdo_mysql"
-resources.db.params.dbname = "easylia"
+resources.db.params.dbname = "easylia-dev"
 resources.db.params.username = "easylia"
 resources.db.params.password = "RKc2uNN7UchznaPm"
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
@@ -24,9 +24,9 @@ phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 
 resources.db.adapter = "pdo_mysql"
-resources.db.params.dbname = "easylia"
-resources.db.params.username = "root"
-resources.db.params.password = "root"
+resources.db.params.dbname = "easylia-dev"
+resources.db.params.username = "easylia"
+resources.db.params.password = "RKc2uNN7UchznaPm"
 
 [development : production]
 phpSettings.display_startup_errors = 1
