--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -10,8 +10,8 @@ resources.frontController.params.displayExceptions = 0
 
 resources.db.adapter = "pdo_mysql"
 resources.db.params.dbname = "easylia"
-resources.db.params.username = "easylia"
-resources.db.params.password = "RKc2uNN7UchznaPm"
+resources.db.params.username = "root"
+resources.db.params.password = "root"
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.view[] = 
 
@@ -25,8 +25,8 @@ phpSettings.display_errors = 1
 
 resources.db.adapter = "pdo_mysql"
 resources.db.params.dbname = "easylia"
-resources.db.params.username = "easylia"
-resources.db.params.password = "RKc2uNN7UchznaPm"
+resources.db.params.username = "root"
+resources.db.params.password = "root"
 
 [development : production]
 phpSettings.display_startup_errors = 1
